@@ -7,6 +7,8 @@ Griffith ChangeLog
 2007-09-06  Michael Jahn
 	* save window state, position and size on windows systems
 	* save selected quick filter criteria
+	* fixed backup if path or filename contains special characters (like german umlauts)
+	* use deflate for backup if available
 
 2007-09-03  Vasco Nunes
 	* Some documentations updates
